[build-system]
requires = ["setuptools>=61",
            "wheel",
            "pybind11",
            "numpy",
            "scipy<1.16.0",
            "pandas",
            "matplotlib",
            "versioneer",
	    "statsmodels",
	    "mpmath",
	    "coxdev"]
build-backend = "setuptools.build_meta"

[project]
name = "glmstar"
readme = "README.md"
requires-python = ">=3.9"
description  = "GlmNet for Python"
authors = [
{name="Trevor Hastie", email="hastie@stanford.edu"},
{name="Jonathan Taylor", email="jonathan.taylor@stanford.edu"},
{name="James Yang", email="jamesyang916@gmail.com"},
{name="Balasubramanian Narasimhan", email="naras@stanford.edu"}]
maintainers = [{name="Jonathan Taylor", email="jonathan.taylor@stanford.edu"},]
dependencies = ["numpy", # max version for numba
               "scipy>=1.8,<1.16.0",
               "pandas",
               "scikit-learn>=1.2",
               "joblib",
               "statsmodels>=0.13",
	       "coxdev",
	       "pybind11",
	       "tqdm",
	       "mpmath"]
classifiers = ["Development Status :: 3 - Alpha",
               "Environment :: Console",
               "Intended Audience :: Science/Research",
               "Operating System :: OS Independent",
               "Programming Language :: Python",
               "Topic :: Scientific/Engineering"]
dynamic = ['version']
license = "BSD-3-Clause"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "glmnet/_version.py"
versionfile_build = "glmnet/_version.py"
tag_prefix = "v"
parentdir_prefix = "glmnet-"


